--- a/src/scss/sections/footer.scss
+++ b/src/scss/sections/footer.scss
@@ -35,6 +35,7 @@
 .footer-bg::before {
   inset: 0;
   background-image: var(--gradient-2);
+  display: none;
 }
 
 .footer-bg .img-cover { object-position: top; }
