--- a/src/scss/common/mixins.scss
+++ b/src/scss/common/mixins.scss
@@ -1,3 +1,53 @@
+@mixin size($w: 100%, $h: 100%){
+  width: $w;
+  height: $h;
+}
+
+@mixin center{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+@mixin dev-border{
+  border: 1px solid red;
+}
+
+@mixin absolute($l: 0, $t: 0){
+  position: absolute;
+  left: $l;
+  top: $t;
+}
+
+
+@mixin flex($jc: flex-start,$ai: stretch,$dir: row) {
+  @if $jc == start or $jc == end {
+    justify-content: flex- $jc;
+  } @else {
+    justify-content: $jc;
+  }
+
+  @if $ai == start or $ai == end {
+    align-items: flex- $ai;
+  } @else {
+    align-items: $ai;
+  }
+
+  display: flex;
+  flex-direction: $dir;
+}
+
+@mixin flex-center{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+@mixin dev-kill-component{
+  display: none;
+}
+
 @mixin icon-button($fz: 24px){
   background: transparent;
   border: none;
@@ -9,4 +59,26 @@
   span{
     font-size: $fz;
   }
+}
+
+@mixin radical-hover{
+  transition: var(--transition-1);
+
+  &:is(:hover, :focus-visible){
+    color: var(--radical-red);
+  }
+}
+
+@mixin horizontal-center{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+
+@mixin absolute-center{
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
