--- a/src/scss/common/mixins.scss
+++ b/src/scss/common/mixins.scss
@@ -52,7 +52,7 @@
   background: transparent;
   border: none;
   outline: none;
-  color: var(--white_a80);
+  color: var(--white-a80);
   cursor: pointer;
   height: max-content;
 
