--- a/src/scss/media-queries.scss
+++ b/src/scss/media-queries.scss
@@ -236,30 +236,36 @@
     position: absolute;
     max-width: max-content;
     z-index: -1;
+    animation: float 6s ease-in-out infinite;
+
   }
 
   .footer .abs-img-1 {
-    width: 9%;
-    top: 12%;
+    width: 17%;
+    top: 16%;
     left: 10%;
   }
 
   .footer .abs-img-2 {
     width: 14%;
     top: 15%;
-    right: 0;
+    right: 15%;
+    animation-delay: 100ms;
+
   }
 
   .footer .abs-img-3 {
     width: 16%;
-    left: 0;
-    bottom: 10%;
+    left: 8%;
+    bottom: 12%;
+    animation-delay: 200ms;
   }
 
   .footer .abs-img-4 {
     width: 9%;
     right: 15%;
     bottom: 10%;
+    animation-delay: 150ms;
   }
 
   .cursor {
@@ -275,7 +281,7 @@
     transition: transform 0.35s;
     pointer-events: none;
     z-index: 6;
-    background-color: white;
+    background-color: black;
   }
   .cursor.hovered { transform: translate(-50%, -50%) scale(1.2); }
   .cursor.disabled { transform: translate(-50%, -50%) scale(0); }
@@ -343,7 +349,7 @@
   }
   .service-card .btn-icon svg { width: 40px; }
   .portfolio-list { column-gap: 90px; }
-  .portfolio-card { margin-block-end: 100px; }
+  .portfolio-card { margin-block-end: 30px; }
   .portfolio-card .card-content { padding-inline: 50px; }
 
   .portfolio-card .btn-icon {
@@ -379,11 +385,11 @@
 @media (min-width: 1400px) {
   :root {
     --fs-1: 13rem;
-    --fs-2: 10rem;
+    --fs-2: 8.5rem;
     --fs-3: 8rem;
   }
   .container { max-width: 1320px; }
-  :is(.header, .gallery, .category, .portfolio) .container { max-width: 1580px; }
+  :is(.header, .gallery, .category, .portfolio, .skills) .container { max-width: 1580px; }
   .header .container { padding-inline: 60px; }
   .hero .container { max-width: 1500px; }
   .hero-content { margin-inline-end: 400px; }
@@ -395,6 +401,23 @@
   .about { padding-block: 180px 120px; }
   .service { padding-inline: 70px; }
   .service-card { padding-block: 65px; }
-  .portfolio .container { padding-inline: 45px; }
+  .portfolio .container, .skills .container { padding-inline: 45px; }
   .footer-top .container { max-width: 1200px; }
 }
+
+
+
+@keyframes float {
+  0% {
+    transform: translateY(0);
+  }
+
+  50% {
+    transform: translateY(-20px);
+  }
+
+  100% {
+    transform: translateY(0);
+  }
+}
+
