--- a/src/scss/sections/about.scss
+++ b/src/scss/sections/about.scss
@@ -10,7 +10,7 @@
 
 .about .section-text {
   font-size: var(--fs-6);
-  color: var(--white_a25);
+  color: var(--white-a25);
   font-weight: var(--fw-300);
   line-height: 1.7;
   margin-block-end: 35px;
