--- a/src/scss/sections/hero.scss
+++ b/src/scss/sections/hero.scss
@@ -32,7 +32,7 @@
   font-weight: var(--fw-300);
   text-transform: uppercase;
   letter-spacing: 5px;
-  color: var(--white_a25);
+  color: var(--white-a25);
 }
 
 .hero .wrapper .space { padding: 0.1em; }
