--- a/src/scss/media-queries.scss
+++ b/src/scss/media-queries.scss
@@ -106,7 +106,7 @@
     font-size: 1.9rem;
     margin-block-end: 30px;
   }
-  .hero { padding-block-start: 150px; }
+  .hero { padding-block-start: 0px; }
 
   .hero .container {
     position: relative;
@@ -123,7 +123,7 @@
   .hero-banner {
     position: absolute;
     top: 50%;
-    right: 0;
+    right: 100px;
     transform: translateY(-50%);
     max-width: 200px;
     z-index: -1;
@@ -217,8 +217,8 @@
   }
 
   .portfolio {
-    padding-block-end: 0px;
-    margin-block-end: 0px;
+    padding-block-end: 0;
+    margin-block-end: 0;
   }
 
   .portfolio .shape {
@@ -273,15 +273,15 @@
     position: fixed;
     top: 0;
     left: 0;
-    width: 75px;
-    height: 75px;
-    mix-blend-mode: exclusion;
+    width: 85px;
+    height: 85px;
+    mix-blend-mode: difference;
     border-radius: var(--radius-circle);
     transform: translate(-50%, -50%) scale(0.35);
     transition: transform 0.35s;
     pointer-events: none;
     z-index: 6;
-    background-color: black;
+    border: 4px solid var(--radical-red);
   }
   .cursor.hovered { transform: translate(-50%, -50%) scale(1.2); }
   .cursor.disabled { transform: translate(-50%, -50%) scale(0); }
@@ -362,6 +362,7 @@
     transition: var(--transition-2);
     background-color: white;
   }
+
   .btn-icon{
     background-color: white;
   }
