--- a/src/scss/sections/footer.scss
+++ b/src/scss/sections/footer.scss
@@ -81,6 +81,8 @@
   .icon-wrapper{
     @include size(52px, 52px);
 
+    border: 1px solid var(--white-a25);
+    cursor: pointer;
     background: white;
     border-radius: 45px;
 
@@ -98,7 +100,6 @@
 
     &:hover{
       transform: scale(1.15);
-      border: 1px solid black;
     }
   }
 }
