--- a/src/scss/globals.scss
+++ b/src/scss/globals.scss
@@ -101,7 +101,9 @@ body {
   overflow-x: hidden;
 }
 
-body.active { overflow: hidden; }
+body.active {
+  overflow: hidden;
+}
 
 :focus-visible { outline-offset: 4px; }
 
@@ -151,7 +153,6 @@ body.active { overflow: hidden; }
 
 .img-holder {
   aspect-ratio: var(--width) / var(--height);
-  background-color: var(--jet-1);
   overflow: hidden;
 }
 
@@ -256,4 +257,67 @@ body.active { overflow: hidden; }
 
 .scrollbar-track{
   display: none !important;
+}
+
+
+.eye-wrapper{
+  width: 95px;
+  height: 95px;
+  animation: bounceball alternate infinite 400ms 40ms ease-in-out;
+  background-color: white;
+  box-shadow:inset -5px -5px 5px rgb(0 0 0 / 7%);
+  border-radius: 50%;
+  transition: opacity 0.3s var(--cubic-in);
+  opacity: 1;
+}
+
+.eye-wrapper.closed{
+  opacity: 0;
+}
+
+.eye {
+  overflow: hidden;
+
+  @include size;
+
+  position: relative;
+}
+
+.eye-iris {
+  width: 40%;
+  height: 40%;
+  left: 18%;
+  top: 18%;
+  border-radius: 50%;
+  background-color: #3b8be5;
+  position: absolute;
+}
+
+.eye-iris.green{
+  background-color: #22c925;
+}
+
+.eye-lens{
+  @include absolute-center;
+
+  width: 30%;
+  height: 30%;
+  background: black;
+  border-radius: 100%;
+}
+
+
+.eye-iris::after {
+  content: "";
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  top: 22%;
+  left: 20%;
+  background-color: rgb(255 255 255 / 43%);
+}
+
+@keyframes bounceball {
+  to { transform: scaleX(1.03) scaleY(0.97); }
 }
