--- a/src/scss/sections/portfolio.scss
+++ b/src/scss/sections/portfolio.scss
@@ -152,6 +152,8 @@
 .portfolio .section-description {
   margin-block-end: 55px;
   margin-top: 20px;
+  line-height: 1.4;
+  font-size: var(--fs-6)
 }
 
 
