--- a/src/scss/globals.scss
+++ b/src/scss/globals.scss
@@ -205,7 +205,7 @@ body.active {
 [data-reveal] {
   transform: translateY(50px);
   opacity: 0;
-  transition: var(--transition-3);
+  transition: 0.7s ease;
 }
 
 [data-reveal="left"] { transform: translate(-50px, 0); }
@@ -242,9 +242,11 @@ body.active {
 .back-top-btn:hover { color: var(--white); }
 
 .section-description{
-  font-size: var(--fs-5);
+  font-size: 2.4rem;
   color: var(--white-a25);
   font-weight: var(--fw-300);
+  line-height: 1.4;
+  margin-top: 15px;
 }
 
 #root {
@@ -253,7 +255,7 @@ body.active {
   overflow: auto;
 }
 
-.scrollbar-track{
+.scrollbar-track-x{
   display: none !important;
 }
 
