--- a/src/scss/globals.scss
+++ b/src/scss/globals.scss
@@ -1,6 +1,3 @@
-$material-icons-font-path: 'material-icons/';
-
-@import '~material-icons/iconfont/material-icons';
 @import "common/mixins";
 
 :root {
@@ -60,11 +57,8 @@ $material-icons-font-path: 'material-icons/';
 
 li { list-style: none; }
 
-a,
-img,
-span,
-button,
-ion-icon { display: block; }
+a, img, span,
+button { display: block; }
 
 a {
   color: inherit;
@@ -79,8 +73,6 @@ button {
   font: inherit;
   cursor: pointer;
 }
-
-ion-icon { pointer-events: none; }
 
 address { font-style: normal; }
 
@@ -105,12 +97,7 @@ body.active {
 
 :focus-visible { outline-offset: 4px; }
 
-::-webkit-scrollbar { width: 5px; }
-
-::-webkit-scrollbar-track { background-color: var(--white); }
-
-::-webkit-scrollbar-thumb { background-color: var(--jet-2); }
-
+::-webkit-scrollbar { width: 0; }
 
 .container { padding-inline: 15px; }
 
@@ -177,24 +164,6 @@ body.active {
   object-fit: cover;
 }
 
-.btn-icon {
-  background-color: var(--bg-color, var(--white));
-  border-radius: var(--border-radius, var(--radius-circle));
-  display: grid;
-  place-content: center;
-  transition: var(--transition-2);
-}
-
-.btn-icon path { transition: var(--transition-2); }
-
-.btn-icon:is(:hover, :focus-visible) {
-  background-color: var(--hover-bg-color, var(--white));
-}
-
-.btn-icon:is(:hover, :focus-visible) path {
-  stroke: var(--hover-text-color, var(--black));
-}
-
 .section-subtitle {
   color: var(--white-a25);
   font-size: var(--fs-7);
@@ -202,52 +171,7 @@ body.active {
   letter-spacing: 3.5px;
 }
 
-[data-reveal], [data-fisrt-reveal] {
-  transform: translateY(50px);
-  opacity: 0;
-  transition: 0.7s ease;
-}
 
-[data-reveal="left"], [data-fisrt-reveal="left"] {
-  transform: translate(-50px, 0);
-}
-
-[data-reveal="right"], [data-fisrt-reveal="right"] {
-  transform: translate(50px, 0);
-}
-
-[data-reveal="opacity"], [data-fisrt-reveal="opacity"] {
-  opacity: 1;
-}
-
-[data-reveal].revealed, [data-fisrt-reveal].revealed {
-  transform: translate(0, 0);
-  opacity: 1;
-}
-
-
-.back-top-btn {
-  position: fixed;
-  bottom: 30px;
-  right: -70px;
-  width: 70px;
-  height: 70px;
-  border: 1px dashed currentcolor;
-  color: var(--radical-red);
-  font-size: var(--fs-11);
-  border-radius: var(--radius-circle);
-  display: grid;
-  place-items: center;
-  opacity: 0;
-  transition: opacity var(--transition-2);
-  z-index: 3;
-}
-
-.back-top-btn.show {
-  opacity: 1;
-}
-
-.back-top-btn:hover { color: var(--white); }
 
 .section-description{
   font-size: 2.4rem;
@@ -267,69 +191,7 @@ body.active {
   display: none !important;
 }
 
-
-.eye-wrapper{
-  width: 95px;
-  height: 95px;
-  animation: bounceball alternate infinite 400ms 40ms ease-in-out;
-  background-color: white;
-  box-shadow:inset -5px -5px 5px rgb(0 0 0 / 7%);
-  border-radius: 50%;
-  transition: opacity 0.3s var(--cubic-in);
-  opacity: 1;
-}
-
-.eye-wrapper.closed{
-  opacity: 0;
-}
-
-.eye {
-  overflow: hidden;
-
-  @include size;
-
-  position: relative;
-}
-
-.eye-iris {
-  width: 40%;
-  height: 40%;
-  left: 18%;
-  top: 18%;
-  border-radius: 50%;
-  background-color: #3b8be5;
-  position: absolute;
-}
-
-.eye-iris.green{
-  background-color: #22c925;
-}
-
-.eye-lens{
-  @include absolute-center;
-
-  width: 30%;
-  height: 30%;
-  background: black;
-  border-radius: 100%;
-}
-
-
-.eye-iris::after {
-  content: "";
-  position: absolute;
-  width: 10px;
-  height: 10px;
-  border-radius: 50%;
-  top: 22%;
-  left: 20%;
-  background-color: rgb(255 255 255 / 43%);
-}
-
-@keyframes bounceball {
-  to { transform: scaleX(1.03) scaleY(0.97); }
-}
-
 a{
   cursor: pointer;
 }
+
