--- a/src/scss/media-queries.scss
+++ b/src/scss/media-queries.scss
@@ -16,48 +16,26 @@
   }
   .navbar.active { transform: translateX(-500px); }
 
-  .gallery-list {
-    grid-template-columns: 1fr 1fr;
-    column-gap: 25px;
-  }
+  .footer__bottom {
+    padding-block-end: 20px;
 
-  .gallery-card .btn-icon {
-    transform-origin: top right;
-    transform: scale(0);
-  }
-  .gallery-card:is(:hover, :focus-within) .btn-icon { transform: scale(1); }
+    .container {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      align-items: center;
+    }
 
-  .gallery-card :is(.card-title, .card-tag) {
-    transform: translateY(10px);
-    opacity: 0;
-    transition: var(--transition-2);
+    .logo {
+      margin: 0;
+    }
   }
-  .gallery-card .card-tag { transition-delay: 0.1s; }
-
-  .gallery-card:is(:hover, :focus-within) :is(.card-title, .card-tag) {
-    transform: translateY(0);
-    opacity: 1;
-  }
-
-  .gallery [data-reveal] {
-    transform: translateY(0);
-    opacity: 1;
-  }
-  .category-item { max-width: 235px; }
-
-  .footer-bottom { padding-block-end: 20px; }
-
-  .footer-bottom .container {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    align-items: center;
-  }
-  .footer-bottom .logo { margin: 0; }
 
   .copyright,
-  .social-list { padding-block-end: 0; }
+  .footer__social-list {
+    padding-block-end: 0;
+  }
 
-  .social-list {
+  .footer__social-list {
     order: 1;
     justify-content: flex-end;
   }
@@ -69,17 +47,10 @@
   }
   .container { max-width: 720px; }
 
-  .about-banner {
+  .about__banner {
     max-width: 820px;
     margin-inline: auto;
   }
-
-  .service-card {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  .service-card .card-subtitle { margin-block-end: 15px; }
 }
 
 @media (min-width: 992px) {
@@ -89,130 +60,64 @@
   .section { position: relative; }
   .container { max-width: 960px; }
 
-  .shape {
-    display: block;
-    position: absolute;
-  }
   .header { padding-block: 30px; }
 
   .navbar {
     padding: 40px;
     padding-block-end: 10px;
-  }
-  .navbar-link { --fs-7: 2.4rem; }
-  .navbar-title { --fs-8: 2.2rem; }
 
-  .navbar-text {
-    font-size: 1.9rem;
-    margin-block-end: 25px;
-  }
-  .hero { padding-block-start: 0; }
+    &__link {
+      --fs-7: 2.4rem;
+    }
 
-  .hero .container {
-    position: relative;
-    z-index: 1;
-  }
-  .hero-title { text-align: left; }
+    &__bottom-title{
+      --fs-8: 2.2rem;
+    }
 
-  .hero .wrapper {
-    --fs-2: 8rem;
-
-    margin-block: -5px 10px;
+    &__bottom-text {
+      font-size: 1.9rem;
+      margin-block-end: 25px;
+    }
   }
 
-  .hero-banner {
-    position: absolute;
-    top: 0;
-    right: 100px;
-    max-width: 200px;
-    z-index: -1;
-    border-radius: 100%;
-  }
-  .hero .shape { display: none; }
-  .gallery { padding-block-end: 140px; }
-  .gallery-list { grid-template-columns: repeat(4, 1fr); }
-  .gallery-item:nth-child(even) { margin-block-start: 100px; }
+  .main {
+    padding-block-start: 0;
 
-  .gallery .scroll-down {
-    width: 85px;
-    height: 85px;
-    margin-block-start: 100px;
-  }
-  .gallery .scroll-down img { width: 26px; }
+    .container {
+      position: relative;
+      z-index: 1;
+    }
 
-  .gallery .shape {
-    left: 5%;
-    bottom: 15%;
-  }
-  .category { --section-padding: 60px; }
-  .category-card { position: relative; }
+    &__title{
+      text-align: left;
+    }
 
-  .category-card .card-banner {
-    position: absolute;
-    bottom: 100%;
-    left: 50%;
-    transform: translate(-50%, -20px);
-    width: 200px;
-    opacity: 0;
-    visibility: hidden;
-    transition: var(--transition-2);
+    .wrapper {
+      --fs-2: 8rem;
+
+      margin-block: -5px 10px;
+    }
+
+    &__banner {
+      position: absolute;
+      top: 0;
+      right: 100px;
+      max-width: 200px;
+      z-index: -1;
+      border-radius: 100%;
+    }
   }
 
-  .category-card:is(:hover, :focus-visible) .card-banner {
-    transform: translate(-50%, 0);
-    visibility: visible;
-    opacity: 1;
-  }
-  .category-card .card-title { --fs-4: 5.5rem; }
-  .category-item { min-width: max-content; }
+  .about{
+    .container {
+      grid-template-columns: 0.9fr 1fr;
+      align-items: flex-start;
+      gap: 80px;
+    }
 
-  .category-list {
-    row-gap: 0;
-    justify-content: flex-start;
-  }
-
-  .about .container {
-    grid-template-columns: 0.9fr 1fr;
-    align-items: flex-start;
-    gap: 80px;
-  }
-  .about-content { order: 1; }
-
-  .about-banner .shape-2 {
-    width: 100%;
-    bottom: -20px;
-    left: 0;
-    animation: moving 8s linear infinite;
-  }
-
-  @keyframes moving {
-    0%,
-    100% { transform: translateY(0); }
-    50% { transform: translateY(30px); }
-  }
-
-  .about .shape-3 {
-    bottom: 0;
-    right: 0;
-  }
-  .service-card { position: relative; }
-
-  .service-card .img {
-    display: block;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 200px;
-    opacity: 0;
-    visibility: hidden;
-    transition: var(--transition-1);
-    z-index: -1;
-  }
-
-  .service-card:is(:hover, :focus-within) .img {
-    opacity: 1;
-    visibility: visible;
+    &__content {
+      order: 1;
+    }
   }
 
   .portfolio {
@@ -220,70 +125,46 @@
     margin-block-end: 0;
   }
 
-  .portfolio .shape {
-    bottom: 0;
-    right: 0;
-  }
+  .footer{
+    .abs-img {
+      display: block;
+      position: absolute;
+      max-width: max-content;
+      z-index: -1;
+      animation: float 6s ease-in-out infinite;
+    }
 
-  .footer .shape {
-    top: 25%;
-    left: 0;
-  }
+    .abs-img-1 {
+      width: 17%;
+      top: 16%;
+      left: 10%;
+    }
 
-  .footer .abs-img {
-    display: block;
-    position: absolute;
-    max-width: max-content;
-    z-index: -1;
-    animation: float 6s ease-in-out infinite;
+    .abs-img-2 {
+      width: 14%;
+      top: 15%;
+      right: 15%;
+      animation-delay: 100ms;
+    }
 
-  }
+    .abs-img-3 {
+      width: 16%;
+      left: 8%;
+      bottom: 12%;
+      animation-delay: 200ms;
+    }
 
-  .footer .abs-img-1 {
-    width: 17%;
-    top: 16%;
-    left: 10%;
-  }
-
-  .footer .abs-img-2 {
-    width: 14%;
-    top: 15%;
-    right: 15%;
-    animation-delay: 100ms;
-
-  }
-
-  .footer .abs-img-3 {
-    width: 16%;
-    left: 8%;
-    bottom: 12%;
-    animation-delay: 200ms;
-  }
-
-  .footer .abs-img-4 {
-    width: 9%;
-    right: 15%;
-    bottom: 10%;
-    animation-delay: 150ms;
+    .abs-img-4 {
+      width: 9%;
+      right: 15%;
+      bottom: 10%;
+      animation-delay: 150ms;
+    }
   }
 
   .cursor {
     display: block;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 85px;
-    height: 85px;
-    mix-blend-mode: difference;
-    border-radius: var(--radius-circle);
-    transform: translate(-50%, -50%) scale(0.35);
-    transition: transform 0.35s;
-    pointer-events: none;
-    z-index: 6;
-    border: 4px solid black;
   }
-  .cursor.hovered { transform: translate(-50%, -50%) scale(1.2); }
-  .cursor.disabled { transform: translate(-50%, -50%) scale(0); }
 }
 
 @media (min-width: 1200px) {
@@ -294,92 +175,82 @@
     --fs-4: 3.6rem;
     --fs-6: 2.6rem;
   }
+
   .container { max-width: 1140px; }
   .header .container { padding-inline: 35px; }
-  .hero { padding-block: 170px 150px; }
-  .hero .container { max-width: 1250px; }
+  .main .container { max-width: 1250px; }
 
-  .hero .wrapper {
-    --fs-2: 10rem;
+  .main{
+    padding-block: 170px 150px;
 
-    margin-block: -10px 15px;
-  }
-  .hero .wrapper .strong { left: 40%; }
+    .wrapper {
+      --fs-2: 10rem;
 
-  .hero-text {
-    --fs-10: 2rem;
+      margin-block: -10px 15px;
 
-    font-weight: var(--fw-400);
-    letter-spacing: 8px;
-  }
-  .hero-banner { max-width: 290px; }
+      .strong{
+        left: 40%;
+      }
+    }
 
-  .hero .shape {
-    display: block;
-    top: 60%;
-    left: 0;
-  }
-  .gallery-list { gap: 50px; }
-  .gallery-card .card-title { font-weight: var(--fw-300); }
-  .category-list { column-gap: 15px; }
-  .category-card .card-title { --fs-4: 7rem; }
-  .about .container { gap: 120px; }
-  .about .shape-1 { width: max-content; }
-  .about .section-title { margin-block-end: 40px; }
-  .about .wrapper { padding-inline-start: 10px; }
+    &__text {
+      --fs-10: 2rem;
 
-  .about .wrapper::before {
-    width: 35px;
-    height: 30px;
+      font-weight: var(--fw-400);
+      letter-spacing: 8px;
+    }
+
+    &__banner {
+      max-width: 290px;
+    }
   }
 
-  .about .section-text {
-    --fs-6: 2.8rem;
+  .about{
+    .container {
+      gap: 120px;
+    }
 
-    margin-block-end: 50px;
-  }
-  .service-card { padding-block: 50px; }
-  .service-card .card-subtitle { --fs-7: 2.4rem; }
-  .service-card .img { width: max-content; }
+    .section-title {
+      margin-block-end: 40px;
+    }
 
-  .service-card .btn-icon {
-    width: 95px;
-    height: 95px;
-  }
-  .service-card .btn-icon svg { width: 40px; }
-  .portfolio-list { column-gap: 90px; }
-  .portfolio-card { margin-block-end: 30px; }
-  .portfolio-card .card-content { padding-inline: 50px; }
+    .wrapper{
+      padding-inline-start: 10px;
 
-  .portfolio-card .btn-icon {
-    width: 60px;
-    height: 60px;
-    top: auto;
-    bottom: 45px;
-    right: 50px;
-    opacity: 0;
-    transition: var(--transition-2);
-    background-color: white;
+      &::before{
+        width: 35px;
+        height: 30px;
+      }
+    }
+
+    .section-text{
+      --fs-6: 2.8rem;
+
+      margin-block-end: 50px;
+    }
   }
 
-  .btn-icon{
-    background-color: white;
-  }
-  .portfolio-card .btn-icon svg { width: 25px; }
-  .portfolio-card:is(:hover, :focus-within) .btn-icon { opacity: 1; }
-  .footer-top { padding-block: 300px; }
+  .portfolio{
+    &__list {
+      column-gap: 90px;
+    }
 
-  .footer-top .section-title {
+    &__card{
+      margin-block-end: 30px;
+    }
+
+    .card-content{
+      padding-inline: 50px;
+    }
+  }
+
+  .footer__top { padding-block: 300px; }
+
+  .footer__top .section-title {
     --fs-2: 8rem;
 
     margin-block-start: 50px;
   }
-
-  .footer .btn-icon {
-    width: 90px;
-    height: 90px;
-  }
-  .footer .btn-icon img { width: 45px; }
 }
 
 @media (min-width: 1400px) {
@@ -391,33 +262,21 @@
   .container { max-width: 1320px; }
   :is(.header, .gallery, .category, .portfolio, .skills) .container { max-width: 1580px; }
   .header .container { padding-inline: 60px; }
-  .hero .container { max-width: 1500px; }
-  .hero-content { margin-inline-end: 400px; }
-  .hero .wrapper { --fs-2: 13rem; }
-  .hero-text { --fs-10: 2.4rem; }
-  .hero-banner { max-width: max-content; }
+  .main .container { max-width: 1500px; }
+  .main__content { margin-inline-end: 400px; }
+  .main .wrapper { --fs-2: 13rem; }
+  .main__text { --fs-10: 2.4rem; }
+  .main__banner { max-width: max-content; }
   .category .container { padding-inline: 40px; }
   .category-card .card-title { --fs-4: 8rem; }
   .about { padding-block: 240px 120px; }
   .service { padding-inline: 70px; }
   .service-card { padding-block: 65px; }
   .portfolio .container, .skills .container { padding-inline: 45px; }
-  .footer-top .container { max-width: 1200px; }
+  .footer__top .container { max-width: 1200px; }
 }
 
 
 
-@keyframes float {
-  0% {
-    transform: translateY(0);
-  }
 
-  50% {
-    transform: translateY(-20px);
-  }
-
-  100% {
-    transform: translateY(0);
-  }
-}
 
