--- a/src/scss/sections/footer.scss
+++ b/src/scss/sections/footer.scss
@@ -2,86 +2,77 @@
 
 .footer {
   position: relative;
-}
 
-.footer .abs-img {
-  display: none;
-}
+  .abs-img{
+    display: none;
+  }
 
-.footer-top {
-  padding-block: 100px 140px;
-  text-align: center;
-  z-index: 1;
+  &__top{
+    padding-block: 100px 140px;
+    text-align: center;
+    z-index: 1;
+  }
 
-}
+  &__top, .section-title{
+    margin-block: 20px 90px;
+    line-height: normal;
+  }
 
-.footer-top .section-title {
-  margin-block: 20px 90px;
-  line-height: normal;
-}
+  .btn-icon{
+    width: 60px;
+    height: 60px;
+    margin-inline: auto;
 
-.footer .btn-icon {
-  width: 60px;
-  height: 60px;
-  margin-inline: auto;
+    --hover-bg-color: var(--radical-red);
 
-  --hover-bg-color: var(--radical-red);
-}
+    img{
+      width: 30px;
+    }
+  }
 
-.footer .btn-icon img { width: 30px; }
+  &__bottom{
+    position: relative;
 
-.footer-bg {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-  background: #02021e;
-}
+    .logo{
+      margin-inline: auto;
+      max-width: max-content;
+      margin-block-end: 20px;
+    }
+  }
 
+  &__social-list{
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+  }
 
+  .social-link{
+    font-weight: var(--fw-500);
 
-.footer-bg .img-cover { object-position: top; }
+    &:is(:hover, :focus-visible) {
+      text-decoration: underline;
+    }
+  }
 
-.footer-bg .img-cover { object-position: top; }
+  &__social-list, .copyright{
+    padding-block-end: 15px;
+  }
 
-.footer-bottom .logo {
-  margin-inline: auto;
-  max-width: max-content;
-  margin-block-end: 20px;
-}
-.footer-bottom{
-  position: relative;
-}
+  .copyright{
+    font-weight: var(--fw-300);
+    letter-spacing: 0.5px;
+    text-align: center;
+  }
 
-.social-list {
-  display: flex;
-  justify-content: center;
-  gap: 10px;
-}
+  &__icon-wrapper{
+    max-width: 367px;
 
-.social-link { font-weight: var(--fw-500); }
+    @include flex(space-around);
 
-.social-link:is(:hover, :focus-visible) { text-decoration: underline; }
+    margin: 0 auto;
+  }
 
-.copyright,
-.social-list { padding-block-end: 15px; }
-
-.copyright {
-  font-weight: var(--fw-300);
-  letter-spacing: 0.5px;
-  text-align: center;
-}
-
-.footer-icon-wrapper{
-  max-width: 367px;
-
-  @include flex(space-around);
-
-  margin: 0 auto;
-
-  .icon-wrapper{
+  &__icon{
     @include size(52px, 52px);
 
     border: 1px solid var(--white-a25);
@@ -105,14 +96,14 @@
       transform: scale(1.15);
     }
   }
-}
 
-.secret{
-  @include absolute;
+  .secret{
+    @include absolute;
 
-  bottom: 0;
-  left: 16px;
-  font-weight: var(--fw-300);
-  opacity: 0.4;
-  font-size: 2rem;
+    bottom: 0;
+    left: 16px;
+    font-weight: var(--fw-300);
+    opacity: 0.4;
+    font-size: 2rem;
+  }
 }
