--- a/src/scss/sections/preloader.scss
+++ b/src/scss/sections/preloader.scss
@@ -2,6 +2,7 @@
 @use './../globals' as *;
 
 .loading {
+  //@include dev-kill-component;
   position: fixed;
   top: 0;
   left: 0;
@@ -12,27 +13,26 @@
   transform-origin: bottom;
   transition: 0.5s var(--cubic-in);
   transition-delay: 0.5s;
+
+  & > * {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    border-radius: 100%;
+    transform: translate(-50%, -50%);
+    transition: var(--transition-2);
+  }
+
+  .circle {
+    animation: rotate360 1.5s linear infinite;
+  }
 }
 
 .loading.loaded {
   transform: scaleY(0);
   pointer-events: none;
-}
 
-.loading > * {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  border-radius: 100%;
-  transform: translate(-50%, -50%);
-  transition: var(--transition-2);
-}
-
-.loading.loaded > * { opacity: 0; }
-
-.loading .circle { animation: rotate360 1.5s linear infinite; }
-
-@keyframes rotate360 {
-  0% { transform: translate(-50%, -50%) rotate(0); }
-  100% { transform: translate(-50%, -50%) rotate(1turn); }
+  & > * {
+    opacity: 0;
+  }
 }
