--- a/src/globals/scss/globals.scss
+++ b/src/globals/scss/globals.scss
@@ -20,11 +20,11 @@
   --ff-recoleta: "Recoleta", serif;
   --ff-gordita: "Gordita", sans-serif;
   --fs-1: 6rem;
-  --fs-2: 5rem;
+  --fs-2: 4.8rem;
   --fs-3: 3.8rem;
   --fs-4: 2.8rem;
   --fs-5: 2.6rem;
-  --fs-6: 2.2rem;
+  --fs-6: 2.1rem;
   --fs-7: 2rem;
   --fs-8: 1.8rem;
   --fs-9: 1.5rem;
@@ -33,7 +33,7 @@
   --fw-300: 300;
   --fw-400: 400;
   --fw-500: 500;
-  --section-padding: 60px;
+  --section-padding: 40px;
   --shadow: 0 12px 30px -10px hsl(0deg 0% 14% / 10%);
   --radius-circle: 50%;
   --radius-5: 5px;
@@ -88,7 +88,7 @@ body {
   font-size: 1.6rem;
   font-weight: var(--fw-400);
   line-height: 2.15;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 body.active {
@@ -174,7 +174,8 @@ body.active {
 
 
 .section-description{
-  font-size: 2.4rem;
+  display: none;
+  font-size: 1.8rem;
   color: var(--white-a25);
   font-weight: var(--fw-300);
   line-height: 1.4;
