--- a/src/sections/about/about.scss
+++ b/src/sections/about/about.scss
@@ -3,11 +3,7 @@
 .about {
   .container{
     display: grid;
-    gap: 45px;
-  }
-
-  .wrapper, .about__banner{
-    padding-inline-start: 45px;
+    gap: 20px;
   }
 
   .section-title{
@@ -15,11 +11,11 @@
   }
 
   .section-text{
-    font-size: 2.8rem;
+    font-size: var(--fs-6);
     color: var(--white-a25);
     font-weight: var(--fw-300);
     margin-block-end: 35px;
-    line-height: 1.56;
+    line-height: 1.7;
   }
 
   .wrapper {
@@ -45,7 +41,8 @@
 
   &__banner{
     position: relative;
-    margin-top: 60px;
+    margin: 20px auto 0;
+    width: 90%;
     animation: float 6s ease-in-out infinite;
   }
 }
