--- a/src/sections/portfolio/portfolio.scss
+++ b/src/sections/portfolio/portfolio.scss
@@ -11,6 +11,7 @@
 
   &__addon-guy {
     position: absolute;
+    display: none;
     left: 38%;
     top: 0;
 
@@ -23,29 +24,28 @@
   }
 
   &__card-block {
-    width: 30%;
     position: relative;
+    padding: 15px;
 
     @include flex(stretch, flex-end, column);
+
+    box-shadow: 4px 4px 23px 0 rgb(34 60 80 / 20%);
   }
 
   &__card-subtitle {
     font-family: var(--ff-recoleta);
-    font-size: 1.8rem;
+    font-size: 1.4rem;
     color: var(--radical-red);
   }
 
   &__card-title {
-    font-size: 2.6rem;
+    font-size: 2rem;
     margin-top: -10px;
     font-weight: var(--fw-400);
   }
 
   &__card-description {
-    width: 500px;
     height: max-content;
-    padding: 18px;
-    font-size: 1.7rem;
     margin-top: 15px;
     line-height: 1.4;
     border-radius: 6px;
@@ -53,8 +53,14 @@
     background: var(--eerie-black);
     position: relative;
     color: black;
-    box-shadow: 4px 4px 23px 0 rgb(34 60 80 / 20%);
     transition: var(--transition-1) .1s;
+    border: none;
+    box-shadow: none;
+    width: initial;
+    font-size: 1.6rem;
+    padding: 0;
+    margin-bottom: 15px;
+
 
     &:hover {
       transform: scale(1.02);
@@ -71,12 +77,12 @@
   }
 
   &__card-time {
-    display: flex;
     align-items: center;
     gap: 6px;
     position: absolute;
     right: 14px;
     bottom: 10px;
+    display: none;
 
     img {
       @include size(20px, 20px);
@@ -91,13 +97,14 @@
     @include flex;
 
     flex-wrap: wrap;
-    margin-top: 10px;
-    column-gap: 12px;
-    row-gap: -3px;
-    width: 490px;
+    row-gap: -10px;
+    column-gap: 8px;
+    margin-top: 0;
+    width: 100%;
+
 
     span {
-      font-size: 1.65rem;
+      font-size: 1.4rem;
     }
   }
 
@@ -108,15 +115,15 @@
 
     @include flex(flex-end);
 
-    gap: 20px;
     margin-right: 20px;
-    animation: align-float 4s ease-in-out infinite;
+    gap: 17px;
+    animation: none;
 
     img {
-      @include size(27px, 27px);
-
       cursor: pointer;
       transition: var(--cubic-out) 0.3s;
+
+      @include size(24px, 24px);
 
       &:hover {
         transform: scale(1.1);
@@ -135,23 +142,19 @@
     font-size: var(--fs-6)
   }
 
-  &__card {
-    position: relative;
-    margin-block-end: 50px;
-    width: 58%;
-
-    &:is(.card-content, .btn-icon) {
-      position: absolute;
-      z-index: 1;
-    }
-  }
-
   &__wrapper {
-    @include flex(space-between);
+    display: block;
+
+    .portfolio__card-block{
+    @include flex(streth, flex-start, column);
+    }
 
     width: 100%;
     gap: 50px;
-    margin: 75px auto 0;
+
+    //margin: 75px auto 0;
+    margin: 45px auto 0;
+
   }
 
   &__wrapper.to-left {
@@ -169,6 +172,16 @@
   }
 
   &__card {
+    display: none;
+    position: relative;
+    margin-block-end: 50px;
+    width: 58%;
+
+    &:is(.card-content, .btn-icon) {
+      position: absolute;
+      z-index: 1;
+    }
+
     cursor: pointer;
     height: 488px;
     background-size: cover;
