--- a/src/globals/scss/media-queries.scss
+++ b/src/globals/scss/media-queries.scss
@@ -13,10 +13,10 @@
   :is(.header, .gallery, .category, .portfolio) .container { max-width: unset; }
 
   .navbar {
-    max-width: 500px;
-    right: -500px;
+    max-width: 350px;
+    right: -350px;
   }
-  .navbar.active { transform: translateX(-500px); }
+  .navbar.active { transform: translateX(-350px); }
 
   .footer__bottom {
     padding-block-end: 20px;
@@ -44,6 +44,35 @@
   }
 }
 
+@media (min-width: 602px){
+  .portfolio{
+    &__wrapper{
+      max-width: 642px;
+    }
+  }
+
+  .skills{
+    &__wrapper-icon{
+      border-radius: 6px;
+      padding: 0 5px;
+      width: 130px;
+    }
+
+    &__wrapper-block{
+      justify-content: flex-start;
+      margin-bottom: 25px;
+      gap: 15px;
+    }
+
+    &__wrapper-title{
+      font-size: 2.6rem;
+    }
+
+  }
+
+}
+
+
 @media (min-width: 768px) {
   :root {
     --fs-3: 4.5rem;
@@ -51,15 +80,109 @@
   .container { max-width: 720px; }
 
   .about__banner {
-    max-width: 820px;
+    max-width: 459px;
     margin-inline: auto;
   }
 }
+
 
 @media (min-width: 992px) {
   :root {
     --fs-1: 8rem;
   }
+
+  .main {
+    .wrapper {
+      .strong {
+        left: 40%;
+      }
+    }
+  }
+
+  .skills{
+    &__wrapper-section{
+      &:has(img){
+        display: flex;
+      }
+
+      width: 50%;
+
+      img{
+        display: block;
+      }
+    }
+  }
+
+
+  .portfolio{
+    &__wrapper{
+      @include flex(space-around);
+    }
+
+    &__card{
+      height: 240px;
+      display: block;
+      width: 444px;
+      margin-top: 50px;
+    }
+
+    &__card-block{
+      box-shadow: none;
+      width: 50%;
+    }
+
+    &__card-description{
+      box-shadow: 4px 4px 23px 0 rgb(34 60 80 / 20%);
+      padding: 18px;
+      font-size: 1.7rem;
+      width: 500px;
+      margin-bottom: 0;
+    }
+
+    &__card-time{
+      display: flex;
+    }
+
+    &__card-tags{
+      margin-top: 10px;
+      column-gap: 12px;
+      row-gap: -3px;
+      width: 490px;
+
+      span{
+        font-size: 1.65rem;
+      }
+    }
+
+    &__card-icons{
+      gap: 20px;
+      animation: align-float 4s ease-in-out infinite;
+
+      img{
+        @include size(27px, 27px);
+      }
+    }
+
+    &__wrapper{
+      max-width: initial;
+      display: flex;
+      justify-content: space-around;
+
+      .portfolio__card-block {
+        @include flex(stretch, flex-end, column);
+      }
+    }
+
+    &__card-subtitle {
+      font-size: 1.8rem;
+    }
+
+    &__card-title{
+      font-size: 2.6rem;
+    }
+
+  }
+
   .section { position: relative; }
   .container { max-width: 960px; }
 
@@ -82,6 +205,12 @@
       margin-block-end: 25px;
     }
   }
+
+  .navbar {
+    max-width: 500px;
+    right: -500px;
+  }
+  .navbar.active { transform: translateX(-500px); }
 
   .main {
     padding-block-start: 0;
@@ -170,6 +299,7 @@
   }
 }
 
+
 @media (min-width: 1200px) {
   :root {
     --fs-1: 10rem;
@@ -177,6 +307,10 @@
     --fs-3: 6.8rem;
     --fs-4: 3.6rem;
     --fs-6: 2.6rem;
+  }
+
+  .back-top-btn{
+    display: grid;
   }
 
   .container { max-width: 1140px; }
@@ -285,98 +419,6 @@
     font-size: 2.6rem;
   }
 
-  .skills{
-    &__wrapper-icon{
-      border-radius: 6px;
-      padding: 0 5px;
-      width: 130px;
-    }
-
-    &__wrapper-block{
-      justify-content: flex-start;
-      margin-bottom: 25px;
-      gap: 15px;
-    }
-
-    &__wrapper-title{
-      font-size: 2.6rem;
-    }
-
-
-    &__wrapper-section{
-      &:has(img){
-        display: flex;
-      }
-
-      width: 50%;
-
-      img{
-        display: block;
-      }
-    }
-  }
-
-  .portfolio{
-    &__wrapper{
-      @include flex(space-between);
-    }
-
-    &__card{
-      display: block;
-    }
-
-    &__card-block{
-      box-shadow: none;
-    }
-
-    &__card-description{
-      box-shadow: 4px 4px 23px 0 rgb(34 60 80 / 20%);
-      padding: 18px;
-      font-size: 1.7rem;
-      width: 500px;
-      margin-bottom: 0;
-    }
-
-    &__card-time{
-      display: flex;
-    }
-
-    &__card-tags{
-      margin-top: 10px;
-      column-gap: 12px;
-      row-gap: -3px;
-      width: 490px;
-
-      span{
-        font-size: 1.65rem;
-      }
-    }
-
-    &__card-icons{
-      gap: 20px;
-      animation: align-float 4s ease-in-out infinite;
-
-      img{
-        @include size(27px, 27px);
-      }
-    }
-
-    &__wrapper{
-      .portfolio__card-block {
-        @include flex(stretch, flex-end, column);
-      }
-    }
-
-    &__card-subtitle {
-      font-size: 1.8rem;
-    }
-
-    &__card-title{
-      font-size: 2.6rem;
-    }
-
-  }
-
   .about{
     .container {
       gap: 120px;
@@ -418,16 +460,31 @@
       column-gap: 90px;
     }
 
+    &__card-github{
+      bottom: 40px;
+      right: 40px;
+    }
+
     &__addon-guy {
       display: block;
     }
 
     &__card{
       margin-block-end: 30px;
+      width: 556px;
+      height: 312px;
     }
 
     .card-content{
       padding-inline: 50px;
+    }
+
+    &__card-block{
+      width: 40%;
+    }
+
+    &__wrapper{
+      justify-content: space-around;
     }
   }
 
@@ -461,9 +518,49 @@
   .service-card { padding-block: 65px; }
   .portfolio .container, .skills .container { padding-inline: 45px; }
   .footer__top .container { max-width: 1200px; }
+
+  .portfolio{
+    &__card{
+      width: 46%;
+      height: 360px;
+    }
+
+    &__card-text{
+      h3{
+        font-size: 2em;
+      }
+
+      p{
+        font-size: 1.5em;
+      }
+    }
+
+  }
+}
+
+@media (min-width: 1596px){
+  .portfolio{
+    &__card{
+      width: 52%;
+      height: 430px;
+    }
+  }
 }
 
 
 
+@media (min-width: 1834px){
+  .portfolio{
+    &__addon-eye {
+      position: absolute;
+      left: 55px;
+      top: 10%;
+    }
+  }
 
-
+  .skills__addon-eye{
+      position: absolute;
+      left: 55px;
+      top: 10%;
+  }
+}
