--- a/src/sections/portfolio/portfolio.scss
+++ b/src/sections/portfolio/portfolio.scss
@@ -5,7 +5,7 @@
 
   &__addon-eye {
     position: absolute;
-    left: 55px;
+    right: 100px;
     top: 10%;
   }
 
@@ -175,7 +175,7 @@
     display: none;
     position: relative;
     margin-block-end: 50px;
-    width: 58%;
+    width: 671px;
 
     &:is(.card-content, .btn-icon) {
       position: absolute;
@@ -183,7 +183,7 @@
     }
 
     cursor: pointer;
-    height: 488px;
+    height: 388px;
     background-size: cover;
     border-radius: 3px;
 
@@ -231,12 +231,12 @@
 
     h3 {
       font-weight: var(--fw-300);
-      font-size: 2em;
+      font-size: 1.6em;
     }
 
     p {
       font-weight: var(--fw-300);
-      font-size: 1.5em;
+      font-size: 1.2em;
     }
   }
 
@@ -246,8 +246,8 @@
     height: 45px;
     background: white;
     position: absolute;
-    bottom: 40px;
-    right: 40px;
+    bottom: 16px;
+    right: 26px;
     overflow: hidden;
 
     img {
